# machine-learning

./: .gitignore  pyproject.toml
data/: dados_cerveja.xlsx  dados_cerveja_nota.xlsx  dados_frutas.xlsx
src/: cerveja.py  frutas.py  regressao.py  star_wars.py
